--- a/KeysReporting.WebAssembly.App/Client/Shared/MainLayout.razor
+++ b/KeysReporting.WebAssembly.App/Client/Shared/MainLayout.razor
@@ -3,9 +3,16 @@
 <header>
     <NavMenu />
 </header>
+<br />
 
-<div class="container">
-    <main role="main">
-        @Body
-    </main>
-</div>
+<main role="main">
+    @Body
+</main>
+
+<footer class="footer">
+    <div class="content has-text-centered">
+        &copy; @(DateTime.Now.Year) - Keys360 Reporting
+    </div>
+</footer>
+
+
