--- a/KeysReporting.WebAssembly.App/Client/Shared/SuccessMessage.razor
+++ b/KeysReporting.WebAssembly.App/Client/Shared/SuccessMessage.razor
@@ -1,10 +1,10 @@
 ﻿@if (!string.IsNullOrEmpty(Message))
 {
-    <section class="hero is-danger is-small">
+    <section class="hero is-success is-small">
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">
-                    Error
+                    Success
                 </h1>
                 <h2 class="subtitle">
                     @Message
