--- a/KeysReporting.WebAssembly.App/Client/Pages/Index.razor
+++ b/KeysReporting.WebAssembly.App/Client/Pages/Index.razor
@@ -6,36 +6,36 @@
 <ErrorMessage Message="@_errorMessage" />
 
 <section class="section">
-<div class="columns is-centered">
-    <div class="column is-4">
-        <div class="tile is-ancestor">
-            <div class="tile is-parent">
-                <div class="tile is-child box">
-                    <p class="title">Log On</p>
-                    <EditForm Model="_userLogin" OnValidSubmit="HandleLogin">
-                        <DataAnnotationsValidator />
-                        <ValidationSummary />
-                        <div class="field">
-                            <label for="username" class="heading">User</label>
-                            <div class="control">
-                                <InputText class="input is-danger" @bind-Value="_userLogin.userName" />
-                                <ValidationMessage For="@(() => _userLogin.userName)" />
-                            </div>   
-                        </div>
-                        <div class="field">
-                            <label for="password" class="heading">Password</label>
-                            <div class="control">
-                                <InputText class="input is-danger" type="password" @bind-Value="_userLogin.password" />
-                                <ValidationMessage For="@(() => _userLogin.password)" />
-                            </div>   
-                        </div>
-                        <hr />
-                        <button type="submit" class="button is-primary">Login</button>
-                    </EditForm>
+    <div class="columns is-centered">
+        <div class="column is-4">
+            <div class="tile is-ancestor">
+                <div class="tile is-parent">
+                    <div class="tile is-child box">
+                        <p class="title">Log On</p>
+                        <EditForm Model="_userLogin" OnValidSubmit="HandleLogin">
+                            <DataAnnotationsValidator />
+                            <ValidationSummary />
+                            <div class="field">
+                                <label for="username" class="heading">User</label>
+                                <div class="control">
+                                    <InputText class="input is-danger" @bind-Value="_userLogin.userName" />
+                                    <ValidationMessage For="@(() => _userLogin.userName)" />
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label for="password" class="heading">Password</label>
+                                <div class="control">
+                                    <InputText class="input is-danger" type="password" @bind-Value="_userLogin.password" />
+                                    <ValidationMessage For="@(() => _userLogin.password)" />
+                                </div>
+                            </div>
+                            <hr />
+                            <button type="submit" class="button is-primary @_buttonClass">Login</button>
+                        </EditForm>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </section>
 
