--- a/KeysReporting.WebAssembly.App/Client/Shared/NavMenu.razor
+++ b/KeysReporting.WebAssembly.App/Client/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
                             <a href="" class="navbar-item">
                                 Agent Report
                             </a>
-                            <a href="/CPH/Search" class="navbar-item">
+                            <a href="/CPH/Report" class="navbar-item">
                                 Calls Per Hour Report
                             </a>
                             @*<a href="@Url.Action("BillingReport", "Reports", new { firstLoad = true })" class="navbar-item">
@@ -44,7 +44,6 @@
                     </div>
                 </div>
                 <div class="navbar-end">
-
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link">
                             LiveVox User ID: @context?.User?.Identity?.Name
